# cloud-mgmt

./: .gitignore  Dockerfile  README.md  ansible.cfg  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
collections/: requirements.yml
filter_plugins/: text_to_dict.py
inventory/: inventory.yml
inventory/host_vars/: device-rtr-1.yml
keys/: .gitkeep
packer-ami/github-runner/: README.md  runner.pkr.hcl
packer-ami/github-runner/scripts/runner/: docker-compose.sh  docker.sh  python-utils.sh
playbooks/: ad-windows.yml  check-vars.yml  pb.get-ec2-info.yml
playbooks/aws/: pb.deploy-lightsail.yml  pb.get-ec2-info.yml
playbooks/do/: pb.deploy-droplet.yml  pb.deploy-multiple-droplets.yml  pb.get-droplet-info.yml
playbooks/vars/: roster.json
plugins/filters/: filter1.py
roles/: README.md
terraform-plans/do-dev/: .terraform.lock.hcl  provider.tf
terraform-plans/do-droplet/: baseline-configuration.yml  main.tf  provider.tf
terraform-plans/do-droplet/data/: nautobot-droplets.yml
terraform-plans/simple-ec2/: main.tf  terraform.tfstate  terraform.tfstate.backup
vars/dcam/999_all/: bgp.yml
vars/dcam/all/: 99_bgp.yml
vars/dcam/sites/somesite/devices/device-rtr-1/: bgp.yml  defaults.yml  dns.yml  interfaces.yml
vars/dcam/sites/somesite/devices/device-rtr-100/: bgp.yml  defaults.yml  dns.yml  interfaces.yml
